# portfolioevolution

./: .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  SIMULATION_ENGINE_CODE_REVIEW.md  Sapling idea - Deposits.md  Seed idea.md  docker-compose.yaml  pyproject.toml  quality_report.json  requirements.txt
.hypothesis/constants/: 004e722d2b39195a  00d71eb8411afa38  00f73109d68ff20b  010258c38047fd64  0147cdbe959c92c3  019c66b764ed2091  01b18400fa7f8f25  02a76b6526f8d394  030b7a8ff1cd607d  031f85f1c11bb00b  033cea2e5cae6cf7  03a0bc33c3be41ac  03d65cf548ce3b23  041b82baf95116f0  0570a7c52cd987f9  05da9f5309b514e5  0614d702bea6ca43  0628f2618034526e  0644d69ebd79b9a1  0649819210a10ee2  068c9e16d4886008  0736e2d4acddd01a  07475514dc0bbadb  07571a31fde0c54a  (+524 more)
config/: deposit_behaviour.yaml  funded_behaviour.yaml  master_config.yaml  pipeline_transitions.yaml  rating_migration.yaml
docs/: confluence_page.md  data_dictionary.md  strategic_applications.md
implementation/: PROJECT_PLAN.md
notebooks/: daily_advance.py
queries/: 01_funded_book_summary.sql  02_pipeline_funnel.sql  03_renewal_tracker.sql  04_deposit_concentration.sql  05_geographic_exposure.sql  06_loan_to_deposit_ratio.sql
schemas/: canonical_schema.yaml  deposit_canonical_schema.yaml  deposit_schema_mapping.yaml  deposit_source_schema.yaml  output_mapping.yaml  schema_mapping.yaml  schema_mapping_draft.yaml  source_schema.yaml  target_schema.yaml
scripts/: e2e_validate.py  generate_synthetic_data.py  push_day0_databricks.py  setup_databricks.py  smoke_test_superregional.py
tests/: conftest.py
(+106 files in other folders)
